--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -210,20 +210,21 @@ tags: [book, template]
 * Style Notes
 
   A killer feature of this book is its /style/: it is *not* yet
-  another user manual, journal or notes with comments abundance.
+  another user manual, journal or notes spiced with comments.
   Initially you will wittingly immerse in a full-dressed Python code.
   And soon being capable to gaze its incredible power and naked beauty
   from inside.
 
-  The main intention of this book is to take to the reader chance to
-  be fun at the reading, to alleviate the headache and brain fog
-  /studying programming by excluding cramming/. A multiplied
-  repetition with hope to rehearse the chunk of studied material and
-  forget it forever — short, attractive but lousy way to achieve
-  knowledge. It is a _cognition lure._ It is a redundant, tedious and,
-  in same time, _popular way to do things wrong._ All what you are
-  need in is to delve into Python depths leading by an experience
-  guide. That's it.
+  The main intention of this book is to take to the reader a chance to
+  be fun at the reading. At the another hand it might be impossible to
+  write a giddy novel for human readers and an absolutely precise set
+  of instructions for computer at the same time. Bear it in mind ~the
+  text~ deliberately splitted into two main chunks by its purpose:
+  /the comments/ and /the source code/ itself. Comments are for humans
+  only, but the source code is for both sides of software: it is
+  human-readable and machine-executable also.
+
+
 
   All articles are short enough to being grasped _less than 25
   minutes_. Self-pace is highly welcomed: /going forward only after
