--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -358,10 +358,13 @@ tags: [book, template]
 
 * A harsh deduction
 
-      #+CAPTION: Test failure
-      #+ATTR_HTML: :class rounded float-left :alt Animals also test
-      #+ATTR_HTML: :title Unconscious testing
-      [[http://0--key.github.io/assets/img/pydes/monkey.jpeg]]
+  #+CAPTION: Test failure
+  #+ATTR_HTML: :class rounded float-left :alt Animals also test
+  #+ATTR_HTML: :title Unconscious testing
+  http://0--key.github.io/assets/img/pydes/monkey.jpeg]]
+
+  Summarize the handful of penetraiting observations above it might be
+  dedused:
 
   The paramount goals of writing are absolute clarity and density, so
   it might sound a quite strange. In reality, it is much complex task
