--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -584,11 +584,11 @@ tags: [book, template]
      #+NAME: none-false-true-assertion
      #+BEGIN_SRC python :session test
        class TestLanguageBase(unittest.TestCase):  # <-- class definition
-           # begins this reserved word /class/ following by the /name of
-           # class/ and its /parent class/ in the ellipsys. On first steps it
-           # might be like a magic mantra to enter the /test suite/.
+           """begins this reserved word /class/ following by the /name of class/
+           and its /parent class/ in the brackets. On first steps it might be
+           like a magic mantra to enter the /test suite/.
 
-           """The first and foremost taks for testing is to ensure how testing
+           The first and foremost taks for testing is to ensure how testing
            tools work. In our case lets begit from the simplest things ever -
            lets discover built-in constants True, False, None with already
            defining testing methods one by one.
