--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -719,6 +719,11 @@ tags: [book, template]
              self.assertTrue(True)  # <-- straight assertion
              self.assertFalse(False)  # False also exists
              self.assertIsNone(None)  # None also predefined by the language
+
+
+     """Naturally that it is more convenient to tame a dense and terse code
+     blocks which are well-fitted on a single page. Thus, try to split all
+     your tests into /logical/ blocks for clarity purpose."""
    #+END_SRC
 
 
