--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -230,8 +230,8 @@ tags: [book, template]
   Followed by a set of plain deductions it might unlock for a literate
   reader a =kingdom of programming=. It is a =kingdom= definitely due
   to the strict set of inner rules controlled by /his Majesty/
-  *Python3*. Learning these rules one by one is the only true path to
-  succeed in studying a /system/.
+  *Python3*. Learning these rules one by one is the only decent path
+  to succeed in studying a /system/.
 
   There is only one path: a bit straightforward, but narrow approach
   to get rid the *misleading phenomenon* off once and forever in our
