--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -213,6 +213,11 @@ tags: [book, template]
 
 * Preface
 
+  #+CAPTION: Older tutor
+  #+ATTR_HTML: :class rounded float-center :alt Play as test
+  #+ATTR_HTML: :title Conduct an experiment
+  https://mk0tredebmaru2va759a.kinstacdn.com/wp-content/uploads/2018/09/best-blocks-for-toddlers.jpg
+
   This book is about programming machines to do precisely what humans
   ordered them. It is same in intention /like/ a thousand similar
   books already written about the same subject. And it is a completely
@@ -238,6 +243,10 @@ tags: [book, template]
   lives. Yes it /is/ neither simple nor popular, alas. It's a natural
   treatment for learning in general, boys and girls.
 
+  All what I might propose to you is to serve as a bit experienced and
+  older guide on your way to acquire precious knowledge. And it will
+  be a small nudge in the right direction. Nothing more, nothing less.
+
   Keep tighter, please.
 
 
@@ -251,7 +260,7 @@ tags: [book, template]
    the knowledge tree-like structure in your mind. There are only a
    /thriple/ primals: =True=, =False= and = None =. All other are
    knots in the large net of derivatives.
-
+   
    For density this is a bottom paragraph with no data. The tap in a
    barrel.
 
