--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -227,11 +227,10 @@ tags: [book, template]
   is a misleading: its history, the current state of things with
   focus on software industry.
 
-  Followed by a set of plain deductions it might unlock for literate
-  reader a =kingdom of programming=. It is a =kingdom= definitely
-  because strict set of inner rules. Learning them one by one is the
-  only path further. The task isn't so taugh it might seem, the rules
-  are interbreeding. And it sufficiently simplify the lesson.
+  Followed by a set of plain deductions it might unlock for a literate
+  reader a =kingdom of programming=. It is a =kingdom= definitely due
+  to the strict set of inner rules. Learning them one by one is the
+  only true path further.
 
   There is only one path: a bit straightforward, but narrow approach
   to get rid the *misleading phenomenon* off once and forever in
