Another bag of words and idioms

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -56,6 +56,47 @@ tags: [book, template]
 ***** Lets check up the provenance of this particular misleading
 
 ***** It is not an author's hobbyhorse of course
+
+***** It is not an aimless writing
+      it is an attempt to satisfy your ego
+
+***** Such is the quandary I found myself in.
+
+***** It might deem as a murky and uncertain
+
+***** And most of them are tempted to be professional ASAP
+
+***** It almost sounds like a joke, but I am in dead earnest
+
+***** A nutty things had happened
+
+***** Undoubtly it is a sapid point of view
+
+***** They are so young and spineless
+
+***** Someone who is well versed in the intricacies of this vocation
+
+***** Propensity to make a quick, simple and wrong conclusion out of genuine evidence
+
+***** All they are crammed in a stiff circumstances
+
+      and usually bragging about their true grit in material in several days
+
+***** For the time being, after much dithering back and forth, I dubbed my
+      little brainchild DPIO
+
+***** The intention was to bestow a mould for further grouth
+      for the youngsters eager to curb this lore
+
+***** Make a toot, joy and gaiety from such boring task as learning
+
+***** All these din around a humble profession as programmer
+
+***** This inference is not rigged or intentionally perverted
+      it is just 
+
+***** An attempt to nip this faulty practice
+      when the first working sample of code deem as the true one
 **** Retrospecive analysis
 
      - Coding in a modern sense of it was born in 40s. It was
