Several useful phrases

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -109,7 +109,37 @@ tags: [book, template]
 
 ***** Intentionally immersed into a valid Python code from a start
 
-***** 
+***** Usually they are fiddling with StackOverflow, copy and paste
+
+***** Naturally it is a sort of tucking
+
+***** And for their mutual astonishment it just not working!
+
+***** Any ateempt to mull it over fails
+
+***** Brievity and clearness in the same time
+
+***** Confederacy of dunces
+
+***** The root of the matter bound with a human nature:
+      everybody habitually deem about yourself in a positive
+
+***** On a helicopter view it seems as a misbegotten attitude to your job
+
+***** And if it works umpteen times consequently it seems to them
+      as a proper way without feeling a little twinge
+
+***** Provides you an opportunity to kick your mind into full gear
+
+***** As the practice shows, this is a big smelly sack of baloney
+
+***** But such pat descriptions do not lead to any understanding
+      or prevent the same patterns from recurring.
+
+***** What if we could truly fathom why people suddenly behave irrationally
+
+***** With tha awarness we would able to gain better control of what we do
+
 
 **** Competitors
 
