Few useful phrases to include

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -140,6 +140,17 @@ tags: [book, template]
 
 ***** With tha awarness we would able to gain better control of what we do
 
+***** To defend a belief or keep affirming that it's true
+
+***** what you contend is what you hope to convince others is correct
+
+***** They are too wordy to be plain and in most cases just intimidatingly perplexing
+
+***** We can ascribe many of these observations to our cognition inertia -
+      inability to see things in its genuine nature.
+
+***** It is a brutally realistic appraisal of current state in the industry
+
 
 **** Competitors
 
