--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -652,11 +652,12 @@ tags: [book, template]
 
   If you're observed an infant behavior strictly enough you might
   notice that it is /a silent (they can't talk yet) testing how things
-  work/. With brisk ingenuity baby implements the series of conscious
-  acts and it should be interpreted as experiments to examine the
-  nature of events. Bear in mind its inborn origin, because every
-  child do it absolutely autonomous, we got conclusion about a native
-  and natural compatibility of humans and testing approach for study.
+  work/. A baby with brisk ingenuity implements the series of
+  conscious acts and it should be interpreted as a sequence of
+  experiments to examine the nature of events. Bear in mind its inborn
+  origin, because every child do it absolutely autonomous, we got
+  conclusion about a genuine and inborn human inclination on testing
+  approach for study anything.
 
 
 * Several useful tips and tricks
