--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -358,10 +358,10 @@ tags: [book, template]
   focus on software industry.
 
   Followed by a set of plain deductions it might unlock for a literate
-  reader a =kingdom of programming=. It is a =kingdom= definitely due
-  to the strict set of inner rules controlled by /his Majesty/
-  *Python3*. Learning these rules one by one is the only proper way
-  to succeed in studying programming language as a /system/.
+  reader a =realm of programming=. It is a =realm= actually due to the
+  strict set of certain rules defined by /his Majesty/ *Python3*.
+  Learning these rules one by one is the only proper way to succeed in
+  studying programming language as a /system/.
 
   There is only one path: a bit straightforward, but narrow approach
   to get rid the *misleading phenomenon* off once and forever in our
