Several new phrases to include

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -151,6 +151,15 @@ tags: [book, template]
 
 ***** It is a brutally realistic appraisal of current state in the industry
 
+***** I still think this is an eminently important difference
+
+***** All they seems to me wierd brainteasers designed to test my analytic mettle
+
+***** A slew of smugs whom incessantly bragging their true grit in comprehension material
+
+***** An ascendency of out-of-date approaches
+
+***** It is not a brash endeavor to pivot all industry upsidedown
 
 **** Competitors
 
