--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -1,6 +1,6 @@
 #+BEGIN_EXPORT html
 ---
-layout: post
+layout: page
 title: Dissecting Python
 tagline: " inside out"
 permalink: /python/books/dissecting_python.html
